--- a/style.css
+++ b/style.css
@@ -7,53 +7,51 @@
 
 }
 
-header{
-  width: ;
+.main-visual{
+  width: 100%;
   height: 400px;
   background-image: url(img/mv.jpg);
   background-size: cover;
-  background-position: center;
+  background-position: bottom;
 
 }
 
-header.heading{
-  padding-top: 20px;
-  padding-left: 20px;
+.headline{
+  padding: 20px;
 
 }
 
 main{
   width: 840px;
-  padding-top: 50px;
+  margin: 50px auto;
 
 
 }
 
-.blog{
-  width: 840px;
-  padding-top: 50px;
-  margin: 0 auto;
-
-
-
-}
-
-.blog-item{
-  line-height: 30px;
-
-
+.service1{
+  margin-bottom: 30px;
   border-bottom: 1px solid #f7f7f7;
-
-}
-.blog-image{
-  padding-top: 30px;
-  
-}
-
-.blog-text{
   padding-bottom: 30px;
 }
-footer{
-  height: 50px;
+
+.service2{
+  margin-bottom: 30px;
+  border-bottom: 1px solid #f7f7f7;
+  padding-bottom: 30px;
 
 }
+
+.service3{
+  margin-bottom: 30px;
+  border-bottom: 1px solid #f7f7f7;
+  padding-bottom: 30px;
+
+}
+
+.service4{
+
+  border-bottom: 1px solid #f7f7f7;
+  padding-bottom: 30px;
+
+}
+
